# orion

./: .gitignore  README.md  app.py  changelog.md  context.md  migrate_sqlite_to_neon.py  requirements.txt  todo.md
data/: runtime_settings.json
pages/: 1_Professor.py  2_Coordenacao.py  3_Relatorios.py  4_Config.py  5_Cadastros.py  6_Consulta_Aluno.py  7_Bancas.py
scripts/: reset_coord_password.py
src/: __init__.py  audit.py  auth.py  boards.py  dashboard.py  database.py  email_sender.py  google_sheets.py  pdf_generator.py  security.py  seed.py  timezone.py  ui.py  utils.py
templates/: ficha_tfg.html
tfgmaterdei/: README.md  atas_banca.csv  config_tfg.xls  google_sheet_config.json  init_neon.py  notas_banca.csv  pyproject.toml  streamlit_app.py
