[project]
name = "tfgmaterdei"
version = "0.1.0"
description = "Sistema de avaliação de TFG com Streamlit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.58.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "xlrd>=2.0.0",
    "openpyxl>=3.0.0",
    "fpdf2>=2.8.7",
    "psycopg[binary]>=3.2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false
